--- a/style.css
+++ b/style.css
@@ -27,6 +27,12 @@ body {
   }
 }
 
+#opt1, #opt2, #opt3 {
+  max-width: 30%;
+  height: 200px;
+
+}
+
 /*pretty background*//*CURRENTLY NOT WORKING NICE*/
 body { 
   background: url('images/bg.jpeg') no-repeat center center fixed; 
