--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   color: white;
 }
 
+div .scoreBox {
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
 /*pretty background*/
 body { 
   background: url('images/bg.jpeg') no-repeat center center fixed; 
