--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-color:rgba(0, 0, 0, 0.5);
 }
 
 /*this is to make the buttons vertically centered*/
