--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-.script-font, #scoreDisp, #opt1-desc, #opt2-desc, #opt3-desc, #p1score, #p2score{
-  font-family: 'Chonburi', cursive;
-  text-align: center;
-  color: white;
-}
-
-div .scoreBox {
-  background-color: rgba(255, 255, 255, 0.9);
-}
-
 /*pretty background*/
 body { 
   background: url('images/bg.jpeg') no-repeat center center fixed; 
@@ -15,8 +5,14 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-color:rgba(0, 0, 0, 0.5);
 }
+
+.script-font, #scoreDisp, #opt1-desc, #opt2-desc, #opt3-desc, #p1score, #p2score{
+  font-family: 'Chonburi', cursive;
+  text-align: center;
+  color: white;
+}
+
 
 /*this is to make the buttons vertically centered*/
 .vertical-center {
@@ -30,30 +26,32 @@ body {
 @media (max-width: 768px) {
   .vertical-center:before {
     height: auto;
-    /* Or */
-    display: none;
+  }
+  #opt1, #opt2, #opt3 {
+      max-width: 100%;
+      height:auto;
   }
 }
 
 #opt1-desc, #opt2-desc, #opt3-desc {
-  margin-top:75%;
+  margin-top:90%;
   font-size: 22px;
 }
 
 /*making images responsive stuff*/
 #opt1, #opt2, #opt3 {
   background-size: 100%;
-/*  width: 100%;*/
   max-width: 33%;
   min-height: 250px;
   height:auto;
 }
 
 #scoreDisp {
-  margin-top: 20px;
+  margin-top: 5%;
 }
 
 #images-row {
+  margin-top: 5%;
   margin-left: auto;
   margin-right: auto;
   display: block;
