--- a/style.css
+++ b/style.css
@@ -7,12 +7,17 @@ body {
   background-size: cover;
 }
 
-.script-font, #scoreDisp, #opt1-desc, #opt2-desc, #opt3-desc, #p1score, #p2score{
+.script-font, 
+#scoreDisp, 
+#opt1-desc, 
+#opt2-desc, 
+#opt3-desc, 
+#p1score, 
+#p2score{
   font-family: 'Chonburi', cursive;
   text-align: center;
   color: white;
 }
-
 
 /*this is to make the buttons vertically centered*/
 .vertical-center {
@@ -27,23 +32,34 @@ body {
   .vertical-center:before {
     height: auto;
   }
-  #opt1, #opt2, #opt3 {
+  #opt1, 
+  #opt2, 
+  #opt3 {
       max-width: 100%;
-      height:auto;
+      max-height:100%;
   }
 }
 
-#opt1-desc, #opt2-desc, #opt3-desc {
+#opt1-desc, 
+#opt2-desc, 
+#opt3-desc {
   margin-top:90%;
   font-size: 22px;
 }
 
 /*making images responsive stuff*/
-#opt1, #opt2, #opt3 {
+#opt1, 
+#opt2, 
+#opt3 {
   background-size: 100%;
   max-width: 33%;
   min-height: 250px;
   height:auto;
+  border: 3px solid white;
+}
+
+.scoreBox {
+  background-color: red;
 }
 
 #scoreDisp {
