--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
   font-family: 'Chonburi', cursive;
   text-align: center;
   color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+
 }
 
 /*pretty background*/
@@ -47,20 +49,11 @@ body {
   #opt1, 
   #opt2, 
   #opt3 {
-      max-width: 100%;
-      max-height:100%;
+    width: 100%;
+    max-width: 100%;
+    max-height:100%;
+    float: left;
   }
-  #opt1, #opt2, #opt3 {
-    text-align: center;
-  }
-}
-
-
-/*sizing plus making the font easier to read*/
-#opt1-desc, 
-#opt2-desc, 
-#opt3-desc {
-  margin-top:75%;
 }
 
 #opt1-desc, 
@@ -82,17 +75,9 @@ body {
   border: solid 3px white;
 }
 
-/*#score1,
-#score2 {
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-}*/
-
 .scoreBox {
-  background-color: rgba(255, 255, 255, 0.5);
   margin-top: 5%;
 }
-
-
 
 #images-row {
   margin-top: 5%;
