--- a/style.css
+++ b/style.css
@@ -5,6 +5,16 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+hr {
+  text-shadow: 2px 2px #242424;
+  color: white;
+}
+
+button {
+  margin-top: 100px;
 }
 
 .script-font, 
@@ -32,23 +42,10 @@ body {
   align-items: center;
 }
 
-/*this is for vertically centering buttons on small screens*/
-@media (max-width: 768px) {
-  .vertical-center:before {
-    height: auto;
-  }
-  #opt1, 
-  #opt2, 
-  #opt3 {
-      max-width: 100%;
-      max-height:100%;
-  }
-}
-
 #opt1-desc, 
 #opt2-desc, 
 #opt3-desc {
-  margin-top:90%;
+  margin-top: 90%;
   font-size: 22px;
 }
 
@@ -66,6 +63,7 @@ body {
 .scoreBox {
   background-color: gold;
   display: none;
+  margin-top: 100px;
 }
 
 #scoreDisp {
@@ -79,3 +77,23 @@ body {
   display: block;
   display: none;
 }
+
+.container {
+  background-color: gold;
+  width: 100%;
+}
+
+/*this is for vertically centering buttons on small screens*/
+@media (max-width: 768px) {
+  .vertical-center:before {
+    height: auto;
+  }
+  #opt1, 
+  #opt2, 
+  #opt3 {
+      max-width: 100%;
+      max-height:100%;
+  }
+}
+
+
