--- a/style.css
+++ b/style.css
@@ -18,6 +18,20 @@ button {
   margin-top: 100px;
 }
 
+.btn {
+  color: white;
+  text-shadow: 1px 1px black;
+}
+
+.btn:hover {
+  color: white;
+  text-shadow: 1px 1px #242424;
+}
+
+.btn.shaow {
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12)
+}
+
 .busybee {
   background-color: gold;
 }
@@ -36,7 +50,6 @@ button {
   font-family: 'Chonburi', cursive;
   text-align: center;
   color: white;
-
   text-shadow: 2px 2px #242424;
 }
 
