--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body {
 hr {
   text-shadow: 2px 2px #242424;
   color: white;
-  margin-bottom: 100px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 button {
@@ -92,7 +93,7 @@ button {
 .scoreBox {
   background-color: gold;
   display: none;
-  margin-top: 100px;
+  margin-top: 75px;
   width: 100%;
   border: 1px solid white;
 }
@@ -102,7 +103,7 @@ button {
 }
 
 #images-row {
-  margin-top: 0%;
+  margin-top: 100px;
 /*  margin-left: auto;
   margin-right: auto;*/
   display: block;
@@ -112,6 +113,26 @@ button {
 .container {
   background-color: gold;
   width: 100%;
+  max-height: 150px;
+}
+
+/*footer stuff*/
+footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 50px;
+    width: 100%;
+    background-color: gold;
+    text-align: center;
+}
+
+footer a {
+  color: white;
+}
+
+footer.bump{
+  margin-top: 20px;
 }
 
 /*this is for vertically centering buttons on small screens*/
